# hindsight_rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  hindsight-core.h
hindsight-core/: Cargo.toml  build.rs
hindsight-core/src/: error.rs  lib.rs
hindsight-core/src/engine/: memory_engine.rs  mod.rs
hindsight-core/src/ffi/: mod.rs
hindsight-core/src/llm/: client.rs  mod.rs
hindsight-core/src/models/: bank.rs  entity.rs  memory.rs  mod.rs
hindsight-core/src/storage/: schema.rs  sqlite.rs
hindsight-core/tests/: integration_test.rs  profile_test.rs  storage_test.rs
scripts/: build-all.sh
