[package]
name = "hindsight-core"
version = "0.1.0"
edition = "2021"
description = "Hindsight agent memory core engine - Rust native"

[lib]
name = "hindsight_core"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls for cross-compile friendliness)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (bundled = no system SQLite dependency)
rusqlite = { version = "0.34", features = ["bundled"] }

# Full-text search
tantivy = "0.22"

# Graph algorithms
petgraph = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# ID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Chinese word segmentation (on-device, no external deps)
jieba-rs = "0.7"

# FFI helpers
libc = "0.2"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
tempfile = "3"
